--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,8 +6,18 @@
     border-bottom: 2px solid black;
 }
 
+.header a {
+    text-decoration: none;
+    color: black;
+}
+
 .header h1 {
     margin: 0;
+}
+
+.header-actions {
+    display: flex;
+    align-items: center;
 }
 
 .header-actions button {
